# 0xone-assistant

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  justfile  pyproject.toml
.github/: renovate.json
.github/workflows/: docker-image-size-check.yml  docker.yml
deploy/docker/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml
deploy/scripts/: vault-bootstrap.sh
deploy/systemd/: 0xone-assistant.service  README.md
docs/ops/: github-setup.md  launchd.plist.example  scheduler.service.example  vault-host-key-rotation.md  vault-secret-leak-recovery.md
plan/: README.md
plan/phase1/: description.md  detailed-plan.md  implementation.md  summary.md
plan/phase10/: description.md  implementation.md  workflow.js
plan/phase2/: description.md  detailed-plan.md  implementation.md  incident-S13-marker-drop.md  known-debt.md  spike-findings.md  summary.md  unverified-assumptions.md
plan/phase3/: description.md  detailed-plan.md  implementation.md  spike-findings.md  summary.md  unverified-assumptions.md
plan/phase4/: description-v2.md  description.md  detailed-plan.md  devil-wave-1.md  devil-wave-2.md  devil-wave-3.md  implementation-v2.md  implementation.md  review-code.md  review-devops.md  runbook.md  spike-findings-rq7.md  spike-findings-v2.md  spike-findings.md  summary.md
plan/phase5/: description-v2.md  description.md  detailed-plan.md  devil-wave-1.md  devil-wave-2.md  devil-wave-3.md  implementation-v2.md  implementation.md  review-code.md  review-devops.md  review-qa.md  runbook.md  spike-findings-v2.md  spike-findings.md  summary.md
plan/phase5a/: summary.md
plan/phase5d/: description.md  devil-wave-1.md  devil-wave-2.md  devil-wave-3.md  implementation-v2.md  review-code.md  review-devops.md  spike-findings.md  spike-rq13.md  summary.md
plan/phase6/: description.md  detailed-plan.md  implementation.md  research.md  spike-findings.md  summary.md
plan/phase6a/: description.md  devil-wave-1.md  devil-wave-2.md  implementation-v2.md  review-code.md  review-devops.md  review-qa.md  spike-findings.md  summary.md
plan/phase6b/: description.md  research.md  summary.md
plan/phase6c/: description.md  research.md
plan/phase6e/: description-v0-subagent-rejected.md  description-v1-altA-rejected.md  description-v2-altB-shared-bridge-rejected.md  description.md  implementation.md
plan/phase7/: description.md  detailed-plan.md  implementation.md  parallel-split-agent.md  spike-findings.md  summary.md  wave-plan.md
plan/phase8/: description-prewipe-rejected.md  description.md  detailed-plan.md  implementation.md  spike-findings.md  summary.md  wave-plan-prewipe-rejected.md
plan/phase9/: description-v0-rejected.md  description-v1-rejected.md  description-v2-rejected.md  description.md  devil-w1-findings.md  devil-w2-findings.md  research-findings.md  review-code.md  review-devil-w3.md  review-devops.md  review-qa.md
scripts/: migrate_midomis_vault.py  test_migrate_midomis_vault.py
skills/gh/: SKILL.md
skills/memory/: SKILL.md
skills/ping/: SKILL.md
skills/render_doc/: SKILL.md
skills/scheduler/: SKILL.md
skills/skill-installer/: SKILL.md
skills/task/: SKILL.md
skills/vault/: SKILL.md
spikes/: marketplace_probe.py  marketplace_probe_report.json  phase5_s10_report.json  phase5_s10_zoneinfo_authority.py  phase5_s1_aiosqlite_contention.py  phase5_s1_report.json  phase5_s2_adapter_send_text.py  phase5_s2_report.json  phase5_s3_report.json  phase5_s3_zoneinfo_dst.py  phase5_s4_flock_semantics.py  phase5_s4_report.json  phase5_s5_queue_backpressure.py  phase5_s5_report.json  phase5_s6_incoming_message_shape.py  phase5_s6_report.json  phase5_s7_report.json  phase5_s7_system_notes_order.py  phase5_s8_report.json  phase5_s8_try_materialize_atomicity.py  phase5_s9_cron_fixtures.json  phase5_s9_cron_fixtures_regen.py  phase6_s0_findings.md  phase6_s0_native_subagent.py  phase6_s0_report.json  phase6_s1_contextvar_hook.py  phase6_s1_contextvar_report.json  phase6_s2_sandbox_report.json  phase6_s2_subagent_sandbox.py  phase7_s0_multimodal_envelope.py  phase7_s0_report.json  phase7_s1_endpoint_ssrf.py  phase7_s1_report.json  phase7_s2_artefact_regex.py  phase7_s2_report.json  phase7_s3_fpdf2_cyrillic.py  phase7_s3_report.json  phase7_s4_report.json  phase7_s4_venv_deps.py  phase7_s5_quota_race.py  (+11 more)
spikes/phase8/: spike_artefact_re_corpus.py  spike_artefact_re_corpus.txt  (+19 more)
tests/: conftest.py  test_allowed_tools_union_collapsed_log.py  test_atomic_install_rollback.py  test_bash_allowlist_gh_api.py  test_bash_allowlist_gh_cli.py  test_bash_allowlist_git_clone.py  test_bash_allowlist_security.py  test_bash_allowlist_skills_scripts.py  test_bash_allowlist_uv_sync.py  test_bash_hook_bypass.py  test_bash_hook_extract_doc_allowlist.py  test_bash_hook_factory_backward_compat.py  test_bash_hook_genimage_allowlist.py  test_bash_hook_render_doc_allowlist.py  test_bash_hook_transcribe_allowlist.py  test_bootstrap.py  test_bootstrap_custom_settings_block.py  test_bootstrap_direct_python.py  test_bootstrap_marker_rotation.py  test_bootstrap_skill_creator.py  test_bridge_ask_timeout_override.py  test_bridge_ask_with_image_blocks.py  test_bridge_history_replay_snippet.py  test_bridge_lifecycle.py  test_bridge_mock.py  test_bridge_per_skill_allowed_tools.py  test_bridge_persists_toolresult_from_usermessage.py  test_bridge_subagent_options.py  test_bridge_yields_user_tool_result.py  test_canonicalize_url.py  test_canonicalize_url_port_normalization.py  test_classify_block_tool_result.py  test_claude_bridge_subagent_integration.py  test_claude_handler.py  test_clean_exit_marker_permissions.py  test_daemon_boot_sweep_uploads.py  test_daemon_clean_exit_marker.py  test_daemon_configure_memory_helpful_exit.py  test_daemon_data_dir_sync_guard.py  test_daemon_ensure_vault.py  (+332 more)
tools/: __init__.py
whisper-server/: README.md  com.zeroxone.whisper-server.plist  com.zeroxone.whisper-tunnel.plist  com.zeroxone.yt-dlp-update.plist  requirements.txt  setup-mac-sidecar.sh
(+171 files in other folders)
