[project]
name = "assistant"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiogram>=3.26,<4",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "aiosqlite>=0.20,<0.22",
  "structlog>=25.1",
  "claude-agent-sdk>=0.1.59,<0.2",
  "pyyaml>=6.0",
  "PyStemmer>=2.2,<4",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=1.0",
  "ruff>=0.8",
  "mypy>=1.13",
  "types-pyyaml>=6.0",
  "pytest-timeout>=2.4.0",
]

[build-system]
requires = ["uv_build>=0.8,<0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "assistant"
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py312"
# Spikes are reference material frozen in-repo; they intentionally use
# style that the main codebase rejects (e.g. nested with statements,
# noqa for BLE001). Keep them out of ruff + mypy.
extend-exclude = ["plan/phase2/spikes", "plan/phase3/spikes"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# Memory test files deliberately use Cyrillic/Latin ambiguous chars
# inside strings (they exercise the ё-fold, Russian stemmer, etc.).
"tests/test_memory_*.py" = ["RUF001", "RUF002", "RUF003"]
"src/assistant/tools_sdk/_memory_core.py" = ["RUF001", "RUF002", "RUF003"]
# Scheduler core carries a Cyrillic/Greek homoglyph map + test cases
# that deliberately use the ambiguous characters.
"src/assistant/tools_sdk/_scheduler_core.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_scheduler_prompt_rejects_cyrillic_lookalike.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_scheduler_prompt_rejects_system_note.py" = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Phase 5d: pytest-timeout dep retained for ad-hoc per-test marks but
# default global timeout REMOVED — empirically conflicts with
# pytest-asyncio auto mode in Docker contexts (test job hung 19 min
# while pytest itself printed nothing). Real hang fix was switching
# from buildx to plain docker build (commit 5b33891).
