[project]
name = "assistant"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiogram>=3.26,<4",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "aiosqlite>=0.20,<0.22",
  "structlog>=25.1",
  "claude-agent-sdk>=0.1.59,<0.2",
  "pyyaml>=6.0",
  "PyStemmer>=2.2,<4",
  # Phase 6a: file-attachment ingestion (PDF/DOCX/TXT/MD/XLSX).
  # python-docx + openpyxl + pypdf are pure-Python wheels (< 1 MB total).
  "python-docx>=1.1,<2",
  # openpyxl >=3.1.5 — earlier 3.1.x sub-versions ignore
  # ``iter_rows(max_row=...)`` on read-only workbooks past the first
  # row (verified empirically), defeating the RQ2 RSS guarantee. The
  # extractor also enforces an explicit row counter as defense-in-
  # depth (see ``files/extract.py``).
  "openpyxl>=3.1.5,<4",
  "pypdf>=5.0,<6",
  # Phase 6b: image vision pipeline (JPEG/PNG/WEBP/HEIC).
  # pillow-heif manylinux_2_28 wheels statically bundle libheif (no
  # apt deps); >=1.3.0 is the floor that bundles libheif 1.21.2
  # (CVE-2025-68431 patched). Pillow constraint follows pillow-heif's
  # plugin API floor; <13 caps against an upcoming Pillow major break.
  # See plan/phase6b/research.md RQ1 for the wheel-vs-apt analysis.
  "Pillow>=10,<13",
  "pillow-heif>=1.3.0,<2",
  # Phase 9: PDF rendering via WeasyPrint (pandoc → HTML5 → PDF).
  # ``<70`` because the legacy ``def fetcher(url, timeout)`` URL-fetcher
  # form was deprecated in 68.0 and removed in 69.0. Phase 9 uses the
  # ``URLFetcher`` subclass form (forward-compat to 69.0+) but the pin
  # still excludes 69.0 pending real-world testing of subclass API
  # stability — see ``src/assistant/render_doc/pdf_renderer.py``
  # ``SafeURLFetcher`` and the spec §2.6 R1.2 closure.
  "weasyprint>=63,<70",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=1.0",
  "ruff>=0.8",
  "mypy>=1.13",
  "types-pyyaml>=6.0",
  # Phase 6a: openpyxl types so the strict mypy gate is happy with
  # ``load_workbook`` / ``Worksheet`` calls in extract.py.
  "types-openpyxl>=3.1,<4",
  "pytest-timeout>=2.4.0",
  # Phase 9: PDF byte-level integration test asserts
  # (test_pdf_renderer_integration.py) parses real WeasyPrint output
  # via pikepdf to confirm valid PDF structure. Test-only dep.
  "pikepdf>=9.0,<11",
]

[build-system]
requires = ["uv_build>=0.8,<0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "assistant"
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py312"
# Spikes are reference material frozen in-repo; they intentionally use
# style that the main codebase rejects (e.g. nested with statements,
# noqa for BLE001). Keep them out of ruff + mypy.
extend-exclude = ["plan/phase2/spikes", "plan/phase3/spikes"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# Memory test files deliberately use Cyrillic/Latin ambiguous chars
# inside strings (they exercise the ё-fold, Russian stemmer, etc.).
"tests/test_memory_*.py" = ["RUF001", "RUF002", "RUF003"]
"src/assistant/tools_sdk/_memory_core.py" = ["RUF001", "RUF002", "RUF003"]
# Scheduler core carries a Cyrillic/Greek homoglyph map + test cases
# that deliberately use the ambiguous characters.
"src/assistant/tools_sdk/_scheduler_core.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_scheduler_prompt_rejects_cyrillic_lookalike.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_scheduler_prompt_rejects_system_note.py" = ["RUF001", "RUF002", "RUF003"]
# Phase 6a file-extract tests round-trip Cyrillic payloads through
# DOCX/TXT/MD parsers and use math comments (×, ≈) for sizing notes.
"tests/test_files_extract_*.py" = ["RUF001", "RUF002", "RUF003"]
# Phase 6a fix-pack: classify_block test pins the Cyrillic
# round-trip through json.dumps/loads — needs the ambiguous-glyph
# allowance that the extract tests already use.
"tests/test_classify_block_tool_result.py" = ["RUF001", "RUF002", "RUF003"]
# Tests that mock aiogram Message objects have to call sync filesystem
# helpers from inside async fixture lambdas (no real I/O — bytes write
# to a tmp_path), so the ASYNC240 advisory is a false positive here.
# ASYNC109: the fake ``bot.download`` mock has to mirror aiogram's
# real ``timeout`` kwarg signature (devil M-W2-6); using
# ``asyncio.timeout`` would not match the contract under test.
"tests/test_telegram_document_handler.py" = ["ASYNC240", "ASYNC109"]
# Phase 6b telegram-photo + media-group tests follow the same fixture
# convention as the 6a document-handler tests.
"tests/test_telegram_photo_handler.py" = ["ASYNC240", "ASYNC109"]
"tests/test_media_group_aggregator.py" = ["ASYNC240"]
"tests/test_handler_image_branch.py" = ["ASYNC240"]
# Phase 6b: media-group aggregator does best-effort sync ``Path.unlink``
# on rejected overflow tmp files inside an async method — there is no
# anyio path to swap in (the suppress block guards OSError), and the
# I/O here is bounded to one stat+unlink per overflow photo.
"src/assistant/adapters/media_group.py" = ["ASYNC240"]
# Phase 6c: Russian transliteration table + Russian replies ship
# Cyrillic glyphs deliberately. Same allowance as memory_*.
"src/assistant/memory/store.py" = ["RUF001", "RUF002", "RUF003"]
"src/assistant/handlers/message.py" = ["RUF001", "RUF002", "RUF003"]
"src/assistant/services/transcription.py" = ["RUF001", "RUF002", "RUF003"]
"src/assistant/adapters/telegram.py" = ["RUF001", "RUF002", "RUF003", "ASYNC240"]
"tests/test_memory_store_save_transcript.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_handler_audio_branch.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_telegram_voice_handler.py" = [
    "RUF001", "RUF002", "RUF003", "ASYNC109", "ASYNC240"
]
"tests/test_transcription_service.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_bridge_ask_timeout_override.py" = ["RUF001", "RUF002", "RUF003"]
# Phase 6 picker tests: integration-style polling with a wall-clock
# deadline mirrors how the daemon actually exercises the loop; the
# asyncio.Event alternative would require leaking the picker's stop
# event, which is intentionally private.
"tests/test_subagent_picker.py" = ["ASYNC110"]
# Phase 9: render_doc + tests use Cyrillic for triggers / replies and
# manipulate sync ``Path`` from inside async helpers (subprocess argv,
# staging file write). The ASYNC240 advisory is a false positive
# (async functions are allowed to do best-effort sync I/O on small
# files; the renderers run in asyncio.to_thread already). RUF001/2/3
# accommodate Cyrillic triggers.
"src/assistant/render_doc/*.py" = [
    "RUF001", "RUF002", "RUF003", "ASYNC240",
]
"src/assistant/tools_sdk/render_doc.py" = [
    "RUF001", "RUF002", "RUF003",
]
"tests/test_phase9_*.py" = [
    "RUF001", "RUF002", "RUF003", "N818",
]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Phase 5d: pytest-timeout dep retained for ad-hoc per-test marks but
# default global timeout REMOVED — empirically conflicts with
# pytest-asyncio auto mode in Docker contexts (test job hung 19 min
# while pytest itself printed nothing). Real hang fix was switching
# from buildx to plain docker build (commit 5b33891).
markers = [
    "requires_pandoc: integration test requires `pandoc` binary on PATH (phase 9)",
    "requires_weasyprint_runtime: integration test requires WeasyPrint shared libs (libpango/harfbuzz/etc., phase 9)",
]
